feat(accordion): Update accordion title to respond to densification (#3325)
* feat(accordion): Update accordion title to respond to densification

* feat(expandable-section): Update to variable font size

--- a/packages/design-system/ui/components/accordion/base/_index.scss
+++ b/packages/design-system/ui/components/accordion/base/_index.scss
@@ -44,7 +44,7 @@
 .slds-accordion__summary-heading {
   display: flex;
   flex-grow: 1;
-  font-size: $font-size-5;
+  font-size: $var-font-size-5;
   line-height: $line-height-heading;
 
   .slds-button:focus {
