--- a/packages/design-system/ui/components/badges/base/_index.scss
+++ b/packages/design-system/ui/components/badges/base/_index.scss
@@ -13,10 +13,9 @@
   background-color: $color-background-shade;
   padding: $spacing-xx-small $spacing-x-small;
   border-radius: $border-radius-pill;
-  font-size: $font-size-x-small;
+  font-size: $font-size-2;
+  font-weight: $font-weight-bold;
   line-height: normal;
-  text-transform: uppercase;
-  letter-spacing: 0.0625em;
   color: $color-text-default;
   vertical-align: bottom;
   white-space: nowrap;
