--- a/packages/design-system/ui/components/breadcrumbs/base/_index.scss
+++ b/packages/design-system/ui/components/breadcrumbs/base/_index.scss
@@ -17,6 +17,7 @@
   .slds-list__item,
   &__item {
     position: relative;
+    font-weight: $font-weight-bold;
 
     &:before {
       content: '\003E';
