--- a/packages/design-system/ui/components/data-tables/base/_index.scss
+++ b/packages/design-system/ui/components/data-tables/base/_index.scss
@@ -36,6 +36,8 @@
     background-color: $table-color-background-header;
     color: $table-color-text-header;
     padding: $table-cell-spacing;
+    font-weight: $font-weight-bold;
+    line-height: normal;
   }
 
   /**
