--- a/packages/design-system/ui/components/lookups/base/_deprecate.scss
+++ b/packages/design-system/ui/components/lookups/base/_deprecate.scss
@@ -73,6 +73,7 @@
      */
     &__item_label,
     &__item--label {
+      @include text-title;
       display: flex;
       align-items: center;
       padding: $spacing-x-small $spacing-medium;
