--- a/packages/design-system/ui/components/popovers/panels/_index.scss
+++ b/packages/design-system/ui/components/popovers/panels/_index.scss
@@ -55,3 +55,12 @@
     }
   }
 }
+
+/**
+ * @name Label for panels
+ * @selector .slds-popover_panel__label
+ * @restrict .slds-popover_panel p
+ */
+.slds-popover_panel__label {
+  @include text-title;
+}
