--- a/packages/design-system/ui/components/combobox/base/_index.scss
+++ b/packages/design-system/ui/components/combobox/base/_index.scss
@@ -182,6 +182,15 @@
 }
 
 /**
+ * @summary Header for choosable option within listbox
+ * @selector .slds-listbox__option-header
+ * @restrict .slds-listbox__option h3
+ */
+.slds-listbox__option-header {
+  @include text-title;
+}
+
+/**
  * @summary Container for listbox option icon
  * @selector .slds-listbox__option-icon
  * @restrict .slds-listbox__option span
