feat(form-element): Add direction classes to slds-form-element (#3534)
* feat(form-element): Add direction classes to slds-form-element

* feat(form-element): Add compound form elements

* feat(form-element): Add deprecated verion as example to test

* Add tests

* Add tests, examples, docs and new form API

* Remove commented out code

* Update combobox snapshot

* Fix VNU issue

* Add PropTypes to record detail components

* Add missing data set back to examples

* Update snapshots

* Fix restriction rules

* Add deprecated annotations to deprecated form code

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -74,6 +74,11 @@
   'select/base/index',
   'form-layout/base/index',
   'form-layout/compound/index',
+  'form-element/stacked/index',
+  'form-element/horizontal/index',
+  'form-element/compound/index',
+  'form-element/address/index',
+  'form-element/record-detail/index',
   'docked-form-footer/base/index',
   'slider/base/index',
 
