--- a/packages/design-system/ui/components/form-element/_doc.scss
+++ b/packages/design-system/ui/components/form-element/_doc.scss
@@ -22,7 +22,7 @@
  *
  * @base
  * @name form-element
- * @selector .slds-form-element
+ * @selector .slds-form-element, .slds-form
  * @support dev-ready
  * @category structure
  * @type layout
