--- a/packages/design-system/ui/components/form-layout/base/_index.scss
+++ b/packages/design-system/ui/components/form-layout/base/_index.scss
@@ -2,144 +2,27 @@
 // Licensed under BSD 3-Clause - see LICENSE.txt or git.io/sfdc-license
 
 /**
- * @name base
- * @selector .slds-form
- * @restrict form, div, fieldset
- * @variant
- */
-
-/**
- * Horizontally aligns a single form label and control on the same line
- *
+ * @summary Horizontal form elements with label left-aligned to the control
  * @selector .slds-form_horizontal
- * @restrict .slds-form:not(.slds-form_compound)
- * @modifier
- * @group layout
+ * @restrict .slds-form
+ * @deprecated
  */
-.slds-form_horizontal {
 
-  .slds-form-element {
-    margin-bottom: $spacing-small;
-  }
-
-  // Force form elements to stretch 100% of available space
-  .slds-form-element:not([class*="slds-size"]) {
-    width: 100%;
-    flex-basis: 100%;
-  }
-
-  @include mq-medium-min {
-
-    // We are to targeting :first-child here due to some issues related to lightning-form-components
-    // Will remove once adoption is better
-    .slds-form-element__label:first-child {
-      float: left;
-      max-width: calc(33% - #{$square-icon-utility-medium}); // Removing the width of the icon for when the help-text icon is present
-      flex-basis: calc(33% - #{$square-icon-utility-medium}); // Some form element controls are set to display:flex
-      padding-top: $spacing-xx-small;
-      padding-right: $spacing-small;
-      margin: 0;
-      position: relative;
-      z-index: 1;
-    }
-
-    .slds-form-element__control {
-      padding-left: 33%;
-      clear: none; // Reset clear: left when switching to horizontal form layout
-
-      .slds-form-element__control {
-        padding-left: 0; // Remove left padding on nested form controls, due to issues related to lightning-form components
-      }
-    }
-
-    .slds-dueling-list {
-      clear: none; // Remove backward compatible support
-    }
-
-    // Since the HTML differs for checkbox and radio groups, adjust the display behavior
-    .slds-checkbox:not(.slds-checkbox_stacked),
-    .slds-radio {
-
-      .slds-form-element__label {
-        position: relative;
-        float: none;
-        width: auto;
-      }
-    }
-
-    // Reset stacked single checkbox
-    .slds-checkbox_stacked {
-      width: 100%;
-
-      .slds-checkbox__label {
-        flex-direction: row;
-        align-items: center;
-      }
-    }
-
-    // Reset label and control inside of compound fields
-    .slds-form-element__row .slds-form-element__label,
-    .slds-form-element__row .slds-form-element__control,
-    .slds-dueling-list__column .slds-form-element__label {
-      width: auto;
-      max-width: 100%;
-      flex-basis: auto;
-      float: none;
-      position: relative;
-      padding-left: 0;
-      margin-bottom: 0;
-    }
-
-    // Help-text icon needs to float adjacent to label
-    .slds-form-element__icon {
-      float: left;
-    }
-  }
-}
+// See /form-element/horizontal for source code
 
 /**
- * @summary Vertically aligns form label and control, provides spacing between form elements
+ * @summary Vertical form elements with label stacked on top of control
  * @selector .slds-form_stacked
- * @restrict .slds-form:not(.slds-form_compound)
- * @modifier
- * @group layout
+ * @restrict .slds-form
+ * @deprecated
  */
 
-.slds-form_stacked .slds-form-element,
-.slds-form--stacked .slds-form-element,
-.slds-form-element.slds-form-element_stacked {
-  display: block;
-  margin-bottom: $spacing-small;
-
-  // Force form elements to stretch 100% of available space
-  &:not([class*="slds-size"]) {
-    width: 100%;
-    flex-basis: 100%;
-  }
-
-  .slds-checkbox,
-  .slds-radio {
-    display: block; // Override display: inline-block found on checkbox/radio
-  }
-
-  .slds-form-element__label,
-  .slds-form-element__control {
-    border-bottom: 0;
-    padding-left: 0;
-    position: relative;
-  }
-
-  .slds-form-element__control {
-    width: 100%;
-    flex-basis: 100%;
-    clear: left;
-  }
-}
+// See /form-element/stacked for source code
 
 /**
  * @summary Horizontally align multiple form elements on the same axis
  * @selector .slds-form_inline
- * @restrict .slds-form
+ * @restrict div
  * @modifier
  */
 .slds-form_inline,
@@ -184,11 +67,4 @@
  */
 .slds-form-element__legend_has-tooltip {
   float: left;
-}
-
-// Need to reset margin when form element is found on readonly or compound field
-// This is an ask from the designer to reduce vertical space for these elements
-.slds-form_compound .slds-form-element,
-.slds-form-element.slds-form-element_readonly {
-  margin-bottom: 0;
 }
