feat(disabled stateful button icons): Add styles, examples, docs, and tests for disabled stateful button icons (#3550)
* feat(disabled-stateful-buttons): add styles and example code to support disabled stateful icon buttons

* feat(disabled-stateful-buttons): add user docs for disabled stateful buttons

* feat(disabled-stateful-buttons): add matchesMarkup tests and update snapshots

* feat(disabled-stateful-buttons): clean up loose ends on props

* feat(disabled-stateful-buttons): revise propTypes and defaultProps

* feat(disabled-stateful-buttons): add release notes

--- a/packages/design-system/ui/components/button-icons/stateful/_index.scss
+++ b/packages/design-system/ui/components/button-icons/stateful/_index.scss
@@ -40,4 +40,11 @@
       fill: $color-text-button-brand;
     }
   }
+
+  &[disabled],
+  &:disabled {
+    background: $brand-disabled;
+    border-color: $brand-disabled;
+    color: $color-text-button-brand-disabled;
+  }
 }
