feat(tabs): Add examples for tabs with icons (#3525)
* feat(tab icons)

Just added examples and documentation to reveal the built-in support for icons.
Updated tests.

* (fix)add h2 to content consitently

* (fix) spelling

* (fix) release notes

* (fix) cleanup

-Cleaned up label components to be better scoped to the examples.
-Made the icon tabs markup consistent.

* chore(tabs) add example to previewer

* chore(tabs) update release notes

* Removed unused code and moved icon support to main component

* Lint

* feat(tabs): Add classes to handle spacing behavior

* Update snapshots

* feat(tabs): Remove assistiveText from entity icon

* Update snapshots

--- a/packages/design-system/ui/components/tabs/base/_index.scss
+++ b/packages/design-system/ui/components/tabs/base/_index.scss
@@ -276,3 +276,25 @@
     font-size: $var-font-size-7;
   }
 }
+
+/**
+ * @summary
+ * @selector .slds-tabs__left-icon
+ * @restrict .slds-tabs_default__item span
+ */
+.slds-tabs__left-icon {
+  margin-right: $spacing-x-small;
+
+  &:empty {
+    margin-right: 0;
+  }
+}
+
+/**
+ * @summary
+ * @selector .slds-tabs__right-icon
+ * @restrict .slds-tabs_default__item span
+ */
+.slds-tabs__right-icon {
+  margin-left: $spacing-x-small;
+}
