feat(welcome-mat): Add Splash and Info-Only variants (#3553)
* Add class to set Welcome Mat tiles to “read only”

* Add Welcome Mat Full Width variant

* Fix a11y issues

* Restructure Welcome Mat Full-Width component

* Update height from Sketch file

* add full-width to docs

* add info-only variant to welcome mat

* rename full-width welcome mat to splash

* add slds-modal_small class

* deprecate and restructure welcome mat classes out from modal

* reorg welcome mat docs examples

* updated slds-modal-small to exact properties from those of deprecated welcoem mat

* update welcome mat release notes

* update splash and info-only height

* update tests

* refactor welcome mat modal wrapper into component

* update annotations on modal size selectors

* update welcome mat docs

* change read-only nomenclature to info-only

* update welcome-mat info-only doc

* refactor WelcomeMatTile for actionable vs info-only

* refactor marketing welcome mat content

* update welcome mat snapshots

* fix deprecation implementation, add test

* remove utility classes from welcome mat

* add back grid utils to welcome mat

* update annotations on welcome mat

* separate welcome tile content from media object structure

* change info-only tiles container class

* add deprecated code for updated welcome mat test

* add tests for welcome mat marketing content components

* fix welcome mat tile class restrictors

* feat(welcome-mat-variant): refactor WelcomeMat component to better support new cases

  * Add helpers for shared component pieces
  * Update tests

* feat(welcome-mat-variant): add border-radius for tiles to prevent corner bleed and remove unused code

* feat(welcome-mat-variant): update wording in welcome mat docs

* feat(welcome-mat-variant): put back Context exports that Previewer needs

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -265,6 +265,8 @@
 
   // Welcome Mat
   'welcome-mat/base/index',
+  'welcome-mat/splash/index',
+  'welcome-mat/info-only/index',
   'welcome-mat/trailhead-connected/index',
 
   // Summary Detail
