fix(shaded-vertical-nav-background): update background color of the selected `slds-nav-vertical__item` element in the shaded background example (#3558)

--- a/packages/design-system/ui/components/vertical-navigation/list/_index.scss
+++ b/packages/design-system/ui/components/vertical-navigation/list/_index.scss
@@ -39,6 +39,10 @@
  */
 .slds-nav-vertical_shade {
 
+  .slds-nav-vertical__item:before {
+    background: $color-background-alt;
+  }
+
   .slds-is-active .slds-nav-vertical__action {
     border-color: $color-border;
   }
