--- a/packages/design-system/ui/components/buttons/_doc.scss
+++ b/packages/design-system/ui/components/buttons/_doc.scss
@@ -11,7 +11,7 @@
  *
  * @name buttons
  * @base
- * @selector .slds-button, .slds-button_stateful
+ * @selector .slds-button, .slds-button_stateful, .slds-button_dual-stateful
  * @category base
  * @type action
  * @role button
