feat(buttons): New size modifier to stretch button to 100% width (#3557)

--- a/packages/design-system/ui/components/buttons/base/_index.scss
+++ b/packages/design-system/ui/components/buttons/base/_index.scss
@@ -358,7 +358,7 @@ a.slds-button--inverse:focus {
 }
 
 /**
- * @summary Creates a button style for full width
+ * @summary Creates a button style for full width that resets styling
  * @selector .slds-button_full-width
  * @restrict .slds-button
  * @modifier
@@ -375,4 +375,15 @@ a.slds-button--inverse:focus {
   &:focus {
     box-shadow: none;
   }
+}
+
+/**
+ * @summary Creates a button style for 100% width that maintains current styling
+ * @selector .slds-button_stretch
+ * @restrict .slds-button
+ * @modifier
+ * @group size
+ */
+.slds-button_stretch {
+  width: 100%;
 }
