feat(tooltips): add link, button, and input examples (#3555)
* feat(tooltips): add link, button, and input examples

* chore(tooltips): add a11y docs, tests, and release notes

* chore(tooltips): update docs

* chore(tooltips): update tests

* fix(tooltips): move components to index.jsx to prevent react errors

* chore(tooltips): update docs

* fix(tooltips): remove form element wrappers

* Update examples

* Update examples

* Update examples

* Trigger build

--- a/packages/design-system/ui/components/tooltips/_doc.scss
+++ b/packages/design-system/ui/components/tooltips/_doc.scss
@@ -10,6 +10,8 @@
  *
  * Showing the tooltip on hover or on keyboard focus of a focusable element ensures that all users can access it, even if they aren’t using a mouse. Examples of focusable elements include links, buttons, and inputs. Give the tooltip an ID and use that as the value of the `aria-describedby` attribute of the DOM element it describes. This helps users of assistive technology read the tooltip content.
  *
+ * When using a link as the focusable element to show a tooltip, add a `<div>` at the bottom of the tooltip bubble that includes a description of where the link will take the user. Add `aria-hidden='true'` to this element, and ensure that the link text itself matches the text within this `<div>`.
+ *
  * @summary A Tooltip is a small piece of contextual information about an element on the screen, which is displayed when a user hovers or focuses on the element it is describing. It is not focusable and cannot contain focusable content.
  *
  * @base
