fix(input): correctly position left icon when in horizonal form (#3569)

--- a/packages/design-system/ui/components/form-element/horizontal/_index.scss
+++ b/packages/design-system/ui/components/form-element/horizontal/_index.scss
@@ -115,5 +115,20 @@
     .slds-dueling-list {
       clear: none; // Remove backward compatible support
     }
+
+    // Handle inputs with left icon
+    .slds-input-has-icon_left {
+
+      .slds-input__icon {
+        left: calc(33% + #{$spacing-small});
+      }
+    }
+
+    .slds-input-has-icon_left-right {
+
+      .slds-input__icon_left {
+        left: calc(33% + #{$spacing-small});
+      }
+    }
   }
 }
