fix(avatar-group): Adjust annotations (#3568)
* fix(avatar-group): remove duplicate @name

* fix(avatar-group): add description to doc.scss

* fix(avatar-group): change restriction rule on grouped avatar

--- a/packages/design-system/ui/components/avatar-group/_doc.scss
+++ b/packages/design-system/ui/components/avatar-group/_doc.scss
@@ -2,6 +2,10 @@
 // Licensed under BSD 3-Clause - see LICENSE.txt or git.io/sfdc-license
 
 /**
+ * An avatar group is an element that communicates to the user that there is
+ * more than 1 person associated to an item. It contains two avatar
+ * components with modifying classes.
+ *
  * @summary Avatar Groups are used to bunch together avatars within a shared context
  *
  * @base
