--- a/packages/design-system/ui/components/cards/base/_blame.scss
+++ b/packages/design-system/ui/components/cards/base/_blame.scss
@@ -50,11 +50,6 @@
   border: $border-width-thin solid $card-color-border;
   border-radius: $border-radius-medium;
 
-  .slds-tabs--default__content,
-  .slds-tabs_default__content {
-    padding: 0;
-  }
-
   // This removes the padding for the plain cards when inside a padded tabset
   .slds-card,
   .slds-card-wrapper {
@@ -70,6 +65,10 @@
     padding-right: 0;
     margin-left: 0;
     margin-right: 0;
+  }
+
+  .slds-card__header {
+    padding-top: 0;
   }
 }
 
