fix(combobox-dialog): Update popover form footer color to be gray (#3575)
* fix(combobox-dialog): Update popover footer color to be gray

* fix(combobox-dialog): Add release notes

* fix(popover): Add border radius

--- a/packages/design-system/ui/components/popovers/base/_index.scss
+++ b/packages/design-system/ui/components/popovers/base/_index.scss
@@ -55,6 +55,8 @@
  */
 .slds-popover__footer_form {
   text-align: center;
+  background: $color-background;
+  border-radius: 0 0 $border-radius-medium $border-radius-medium;
 }
 
 /**
